--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 server.port=8000
 
 # opciones de conexion a la base de datos:
-spring.datasource.url=jdbc:postgresql://localhost:5432/chat
+spring.datasource.url=jdbc:mysql://localhost:3306/chat
 # el usuario debe ser creado primero en PostgreSQL
-spring.datasource.username=proyectuser
-spring.datasource.password=qwerty123
+spring.datasource.username=root
+spring.datasource.password=
 
 # opciones de paginacion (para ir bajando datos de a poco)
 spring.data.rest.page-param-name=page
@@ -17,6 +17,6 @@ spring.data.rest.max-page-size=20
 # ver las consultas en la terminal
 spring.jpa.show-sql=true
 # upgradea las tablas a partir de los modelos
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
