cambie el id usuario por string

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.data.rest.max-page-size=20
 # ver las consultas en la terminal
 spring.jpa.show-sql=true
 # upgradea las tablas a partir de los modelos
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
