--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8000
 spring.datasource.url=jdbc:mysql://localhost:3306/chat
 # el usuario debe ser creado primero en PostgreSQL
 spring.datasource.username=root
-spring.datasource.password=4201620
+spring.datasource.password=
 
 # opciones de paginacion (para ir bajando datos de a poco)
 spring.data.rest.page-param-name=page
