--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8000
 spring.datasource.url=jdbc:postgresql://localhost:5432/chat
 # el usuario debe ser creado primero en PostgreSQL
 spring.datasource.username=proyectuser
-spring.datasource.password=
+spring.datasource.password=qwerty123
 
 # opciones de paginacion (para ir bajando datos de a poco)
 spring.data.rest.page-param-name=page
@@ -17,6 +17,6 @@ spring.data.rest.max-page-size=20
 # ver las consultas en la terminal
 spring.jpa.show-sql=true
 # upgradea las tablas a partir de los modelos
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
